--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 		<div class="char-set">
 		
 			<div class="char">
-				<div class="char-sample"><span class="dim">„a</span></span>«<span class="dim">b</span>»<span class="dim">c”</span></div>
+				<div class="char-sample"><span class="dim">„a</span>«<span class="dim">b</span>»<span class="dim">c”</span></div>
 				
 				<div class="unicode">
 					<code><strong>U+00AB</strong> LEFT-POINTING DOUBLE ANGLE QUOTATION MARK</code>
@@ -453,7 +453,7 @@
 </p>
 
 <h2>Foarte mică bibliografie</h2>
-<ul role=list>
+<ul role="list">
 	<li>
 		<a
 			href="http://en.wikipedia.org/wiki/Romanian_alphabet"
